5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1708_3033.log
== TEST (2019-04-29 14:27:51) 
-- CODE:
x= float(input("x:"))
if(x=>-100and x<0):
	print((x+1/1)*-1)
-- ERROR:
File "XXXX", line 2
    if(x=>-100and x<0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:27:57) 
-- CODE:
x= float(input("x:"))
if(x =>-100and x<0):
	print((x+1/1)*-1)
-- ERROR:
File "XXXX", line 2
    if(x =>-100and x<0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:28:08) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print((x+1/1)*-1)
-- ERROR:
File "XXXX", line 2
    if(x =>-100and x<0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:29:08) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print((x*-1/1/x)
-- ERROR:
File "XXXX", line 4
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:29:17) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print(x*-1/1/x)
-- ERROR:
File "XXXX", line 4
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:29:40) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print(x*-1*1/x)
-- ERROR:
File "XXXX", line 4
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:30:00) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print((x*-1)1/x)
-- ERROR:
File "XXXX", line 3
    print((x*-1)1/x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:30:22) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print((x*(-1))*1/x)
-- ERROR:
File "XXXX", line 3
    print((x*-1)1/x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:30:34) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print((x*(-1))+1/x)
-- ERROR:
File "XXXX", line 3
    print((x*-1)1/x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:30:42) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print((x*(-1))+1/x)
-- ERROR:
File "XXXX", line 3
    print((x*-1)1/x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:30:53) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print((x*(-1))-1/x)
-- ERROR:
File "XXXX", line 3
    print((x*-1)1/x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:31:12) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print((x*(-1))-x/1)
-- ERROR:
File "XXXX", line 3
    print((x*-1)1/x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:31:23) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print((x*(-1))+x/1)
-- ERROR:
File "XXXX", line 3
    print((x*-1)1/x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:31:33) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print((x*(-1))+x/1)
-- ERROR:
File "XXXX", line 3
    print((x*-1)1/x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:31:49) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print((x*(-1))*x/1)
-- ERROR:
File "XXXX", line 3
    print((x*-1)1/x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:32:06) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print((x*(-1))//x/1)
-- ERROR:
File "XXXX", line 3
    print((x*-1)1/x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:32:15) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print((x*(-1))/x/1)
-- ERROR:
File "XXXX", line 3
    print((x*-1)1/x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:33:13) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print(-(1/x))
-- ERROR:
File "XXXX", line 3
    print((x*-1)1/x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:33:47) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print(round(-(1/x)),4)
-- ERROR:
File "XXXX", line 3
    print((x*-1)1/x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:33:54) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print(round(-(1/x)),4)
-- ERROR:
File "XXXX", line 3
    print((x*-1)1/x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:34:04) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print(round(-(1/x)),3)
-- ERROR:
File "XXXX", line 3
    print((x*-1)1/x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:34:46) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print(round(-(1/x),3)
-- ERROR:
File "XXXX", line 4
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:35:06) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print(round(-(1/x),4))
-- ERROR:
File "XXXX", line 4
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:37:20) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print(round(-(1/x),4))
elif(x>0 and x<=100):
	print(round(1/x,4))
else:
	x>=1000
	print("entrada invalida")
	
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:37:43) 
-- CODE:
x= float(input("x:"))
if(x>=-100and x<0):
	print(round(-(1/x),4))
elif(x>0 and x<=100):
	print(round(1/x,4))
else:
	x>=1000
	print("entrada invalida")
	
-- EXECUTION TIME:
0.198413
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
0.0109
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
0.0181
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
40.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
